ozunuane| Service.yaml, README.md|docs(k8s): Add comprehensive Kubernetes Service types

--- a/Kubernetes-Practical/Service/Service.yaml
+++ b/Kubernetes-Practical/Service/Service.yaml
@@ -81,5 +81,6 @@ spec:
   - protocol: TCP
     port: 80
     targetPort: 80
-  type: Headless  
+  clusterIP: None
+  # Headless service: no proxy, direct pod endpoint access
 
