--- a/Kubernetes-Practical/Service/Service.yaml
+++ b/Kubernetes-Practical/Service/Service.yaml
@@ -19,6 +19,10 @@ spec:
         image: nginx:1.15.4
         ports:
         - containerPort: 80
+        securityContext:
+          allowPrivilegeEscalation: false
+          runAsNonRoot: true
+
 
 ### NodePort Service 
 ---
