--- a/Kubernetes-Practical/Service/Service.yaml
+++ b/Kubernetes-Practical/Service/Service.yaml
@@ -17,8 +17,19 @@ spec:
       containers:
       - name: nginx
         image: nginx:1.15.4
-        ports:
-        - containerPort: 80
+        imagePullPolicy: IfNotPresent
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 80
+          initialDelaySeconds: 30
+          periodSeconds: 10
+        readinessProbe:
+          httpGet:
+            path: /
+            port: 80
+          initialDelaySeconds: 5
+          periodSeconds: 5
         securityContext:
           allowPrivilegeEscalation: false
           runAsNonRoot: true
@@ -72,7 +83,7 @@ spec:
   selector:
     app: nginx
   ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 80
+    - protocol: TCP
+      port: 80
+      targetPort: 80
   clusterIP: None
