--- a/Kubernetes-Practical/Service/Service.yaml
+++ b/Kubernetes-Practical/Service/Service.yaml
@@ -33,6 +33,8 @@ spec:
         securityContext:
           allowPrivilegeEscalation: false
           runAsNonRoot: true
+          
+#NodePort Service 
 ---
 apiVersion: v1
 kind: Service
@@ -48,6 +50,8 @@ spec:
     port: 80
     targetPort: 80
   type: NodePort
+
+# ClusterIP Service 
 ---
 apiVersion: v1
 kind: Service
@@ -61,6 +65,8 @@ spec:
     port: 80
     targetPort: 80
   type: ClusterIP
+
+# LoadBalancer Service 
 ---
 apiVersion: v1
 kind: Service
@@ -74,6 +80,8 @@ spec:
     port: 80
     targetPort: 80
   type: LoadBalancer
+  
+# Headless Service 
 ---
 apiVersion: v1
 kind: Service
